# final-QRD

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PROGRESS.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_COMPREHENSIVE_REPORT.md  PHASE1_DOCUMENTATION_INDEX.md  PHASE1_FINAL_REPORT.md  PHASE1_IMPLEMENTATION_CHECKLIST.md  PHASE1_STATUS.md  PHASE1_VERIFICATION_REPORT.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE2_METRICS_REPORT.md  PHASE2_SESSION_SUMMARY.md  README.md  SECURITY.md  TASK_COMPLETION_REPORT.md  TEST_RESULTS_FINAL.md  benchmark_results_complete.txt  benchmark_results_phase2.txt  full_test_results.txt  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  test_results.txt  test_results_expanded.txt  test_results_phase2.txt
.github/workflows/: black-duck-security-scan-ci.yml  codeql.yml  fuzz-nightly.yml
benches/: README.md  compression_analysis.rs
core/qrd-core/: Cargo.toml
core/qrd-core/benches/: core_bench.rs
core/qrd-core/examples/: compression_analysis.rs
core/qrd-core/src/: columnar.rs  compression.rs  ecc.rs  encoding.rs  encryption.rs  error.rs  file.rs  footer.rs  generated_unit_tests.rs  integrity.rs  lib.rs  memory.rs  parser.rs  reader.rs  row_group.rs  schema.rs  signing.rs  writer.rs
core/qrd-core/tests/: adversarial.rs  compliance.rs  corruption.rs  extended_integration.rs  full_end_to_end.rs  fuzzed_binary.rs  integration.rs  malformed.rs  phase1.rs  properties.rs  quality.rs  replay.rs  resilience.rs  signing_integration.rs  timing_resistance.rs
core/qrd-ffi/: Cargo.toml
core/qrd-ffi/include/: qrd.h
core/qrd-ffi/src/: lib.rs
core/qrd-ffi/tests/: extended_ffi_tests.rs
core/qrd-wasm/: Cargo.toml
core/qrd-wasm/src/: lib.rs
docs/: FORMAT_SPEC.md  WORKSTREAM1_COMPLETION.md  WORKSTREAM2_AUDIT.md  WORKSTREAM2_COMPLETION.md  WORKSTREAM2_PLAN.md  WORKSTREAM3_COMPLETION.md  WORKSTREAM4_COMPLETION.md
docs/architecture/: ARCHITECTURE.md
docs/sdk/: SDKS.md
docs/security/: CRYPTOGRAPHY.md  FUZZING.md
examples/: compression_analysis.rs
fuzz/: Cargo.toml  README.md
fuzz/corpus/: sample.qrd
fuzz/fuzz_targets/: decompress.rs  decrypt_payload.rs  parse_footer.rs  parse_header.rs
reports/: KARYOGIT.md  bench_report.md  benchmark_full_report.md  benchmark_summary.md
sdk/: README.md
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/include/: qrd.hpp
sdk/cpp/src/: qrd.cpp
sdk/cpp/tests/: qrd_smoke.cpp
sdk/go/: README.md  go.mod  qrd.go  qrd_test.go
sdk/java/: README.md  pom.xml
sdk/java/src/main/java/dev/qrd/: Qrd.java
sdk/python/: README.md  pyproject.toml
sdk/python/src/qrd/: __init__.py  core.py
sdk/python/tests/: test_scaffold.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.js  index.ts  wasm.js  wasm.ts
sdk/typescript/test/: scaffold.test.js
tests/: README.md  compliance_tests.rs
tests/compliance/: aes_gcm_vectors.rs  ed25519_vectors.rs  hkdf_vectors.rs  mod.rs  sha256_vectors.rs
tests/golden/: README.md
tests/integration/: README.md
tests/property/: README.md
tests/unit/: README.md
tools/: bench_report.py
tools/qrd-cli/: Cargo.toml  README.md
tools/qrd-cli/src/: lib.rs  main.rs
tools/qrd-cli/tests/: extended_cli_tests.rs
(+1 files in other folders)
