[package]
name = "qrd-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "qrd_core"
path = "src/lib.rs"

[dependencies]
# Compression
zstd = "0.13"
lz4 = "1.24"

# Cryptography
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
subtle = "2.5"  # Constant-time utilities for cryptography
ed25519-dalek = "2.1"  # Ed25519 digital signatures

# Error handling and utilities
thiserror = "1.0"
crc32fast = "1.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "core_bench"
harness = false
