[build-system]
requires = ["setuptools>=68", "wheel", "cffi>=1.15"]
build-backend = "setuptools.build_meta"

[project]
name = "qrd"
version = "0.1.0"
description = "QRD SDK — Privacy-native columnar container format"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cffi>=1.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "mypy>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
